styles/pages.scss
/* ... */
@keyframes mouse-wheel {
  0% {
    transform: translate(0px);
    opacity: 1;
  }
  50% {
    transform: translate(0px ,5px);
    opacity: 0;
  }
  100% {
    transform: translate(0px);
    opacity: 1;
  }
}

.hide {
  display: none;
}




// breakpoints styles
// breakpoints

@media (min-width: 1440px) {
  .home-page {
    .home-page-content {
      margin: 0 auto;
      .home-page-small-title {
        font-size: 22px
      }
      .vertical-line {
        height: 111px;
      }
      .home-page-large-title {
        font-size: 72px;
        line-height: 85px;
      }
      .home-page-rates-container {
        .home-page-content-link a {
          width: 205px;
          font-size: 22px;
        }
      }
      .home-page-content-link a.link-clutch {
        width: 240px;
      }
    }
  }
  .side-info-top .side-info-top-content {
    font-size: 18px;
  }
}

@media (min-width: 1024px) {
  .our-services .home-section-plates-item {
    flex: 1 0 200px;
  }
}

@media (max-width: 1024px) {
  .home-section-plates {
    justify-content: center
  }
  .our-services {
    .plates-grid {
      display: none;
    }
    .home-section-plates-item {
      flex: 1 0 30%;
    }
  }
}
// @media (max-width: 768px) {
//   .our-services .home-section-plates-item {

//   }
// }

@include for-tablet {

  .section-founders {
    flex-direction: column;
    .founders-text-section {
      width: unset;
    }
    .founders-img-container {
      .founders-img {
        width: 100%;
      }
    }
  }
  .our-services .home-section-plates-item {
    flex: 1 0 30%;
  }
}

@include for-mobile {
  .our-services .home-section-plates-item {
    flex: 1 0 50%;
    height: 170px;
  }
}

